packages/es5-ext@4d7f742/test/error/%23/throw.load.js
montageDefine("4d7f742","test/error/%23/throw",{dependencies:[],factory:function(e,r,t){"use strict";t.exports=function(e,r){var t=new Error;try{e.call(t)}catch(n){r(n,t)}}}});